--- a/Delibrary_Team_Project/src/main/webapp/resource/TeamCSSHome.css
+++ b/Delibrary_Team_Project/src/main/webapp/resource/TeamCSSHome.css
@@ -231,6 +231,11 @@ img {
 	float: right;
 }
 
+.recommend {
+	display: inline;
+	float: left;
+}
+
 .recommend img{
 	width: 90px; height: 130px;
 }
@@ -243,7 +248,7 @@ img {
 }
 
 #wrapper {
-	display: flex;
+	display: hidden;
 	justify-content: center;
 	position: relative;
 	top: 25%;
@@ -311,7 +316,7 @@ img {
 }
 
 /* scroll */
-@keyframes scroll {
+/* @keyframes scroll {
  0% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
@@ -359,4 +364,4 @@ img {
   height: 300px;
   width: 200px;
   line-height: 300px;
-}
+} */
